delete user, create transactions and list transactions partially tested